<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="@color/colorGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/dialogTaskUpdate_TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nome da tarefa"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/background_light" />

        </android.support.design.widget.TextInputLayout>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/prioridade"
            android:textColor="@color/textColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/dialogTaskUpdate_RadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6">

            <RadioButton
                android:id="@+id/dialogTaskUpdate_RadioButtonHi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alta"
                android:textColor="@color/textColor" />

            <RadioButton
                android:id="@+id/dialogTaskUpdate_RadioButtonMid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m_dia"
                android:textColor="@color/textColor" />

            <RadioButton
                android:id="@+id/dialogTaskUpdate_RadioButtonLow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/baixa"
                android:textColor="@color/textColor" />

        </RadioGroup>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="5dp"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/dialogTaskUpdate_ButtonCancel"
                style="@android:style/Widget.Button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@color/buttonColor"
                android:text="@string/cancelar"
                android:textSize="14sp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="5dp"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/dialogTaskUpdate_ButtonUpdate"
                style="@android:style/Widget.Button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@color/buttonColor"
                android:text="ATUALIZAR" />
        </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>

</LinearLayout>
